# licenseptium

./: Cargo.toml
src/: lib.rs  main.rs
src/delete_license/src/: main.rs
src/new_license/src/: main.rs
