[package]
name = "licenseptium"
version = "1.0.0"
authors = ["Himmet Karahan Buhan <contact@karahanbuhan.com>"]
edition = "2018"

[[bin]]
name = "new_license"
path = "src/new_license/src/main.rs"

[[bin]]
name = "delete_license"
path = "src/delete_license/src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.8"
tokio = { version = "1.11.0", features = ["macros"] }
tokio-postgres = { version = "0.7.2", features = [
    "with-uuid-0_8",
    "with-chrono-0_4",
] }
deadpool-postgres = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.67"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
config = "0.11.0"
thiserror = "1.0.29"
sha2 = "0.9.8"
hex = "0.4.3"
